--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/p300/liyuwei/env/miniconda3/envs/nr/bin/python"
+    "python.pythonPath": "C:\\Users\\liyuwei\\anaconda3\\envs\\pytorch\\python.exe",
+    "git.ignoreLimitWarning": true
 }
