--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "name": "win_train",
             "type": "python",
             "request": "launch",
-            "args": ["--dataset", "E:\\LIYUWEI\\hand_mri\\Seafile\\seg_final\\"],
+            "args": ["--dataset", "E:\\LIYUWEI\\hand_mri\\Seafile\\seg_final\\", "--segonly", "--batchSz", "4"],
             "program": "examples/train_mribone.py",
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal"
